# advent-of-code

./: .gitignore
2023/data/: day10.txt  day11.txt  day12.txt  day13.txt  day14.txt  day15.txt  day16.txt  day17.txt  day18.txt  day19.txt  day4.txt  day7.txt  day8.txt  day9.txt
2023/python/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
2024/: day1.py  day1.txt
2024/cpp/: day1.cpp  day2.cpp
2024/data/: day10.txt  day11.txt  day15.txt  day16.txt  day17.txt  day18.txt  day19.txt  day20.txt  day21.txt  day21_easy.txt  day22.txt  day23.txt  day24.txt  day25.txt  day25_easy.txt  day4.txt  day5.txt  day6.txt  day7.txt  day8.txt  day9.txt
2024/python/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  helper.py
2024/rust/src/: day1.rs  day2.rs  main.rs
2025/python/: day1.py  day2.py  day3.py  day4.py
libs/aoc_helper/: pyproject.toml
libs/aoc_helper/src/aoc_helper/: __init__.py  __main__.py  algorithm.py  bit.py  cli.py  constants.py  io.py  script_template.py  types.py
