[project]
name = "aoc-helper"
version = "0.1.0"
description = "Helper functions for AOC"
readme = "README.md"
authors = [
    { name = "mmb L" }
]
requires-python = ">=3.12"
dependencies = [
    "click >= 8.1.8, < 9"
]

[project.scripts]
aoc = "aoc_helper.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
dev-mode-exact = true
